fix image size issue on mobile

--- a/style.css
+++ b/style.css
@@ -143,7 +143,8 @@ a {
     }
 
     #find-us-unit {
-        max-width: 800px;
+        width: 800px;
+        max-width: 100%;
     }
 
     #find-us-google-maps-icon {
